--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "test": "ts-node test/CDCLTest.ts"
   },
   "dependencies": {
+    "@egjs/hammerjs": "^2.0.17",
+    "component-emitter": "^1.3.0",
     "immutable": "^4.0.0",
+    "keycharm": "^0.3.1",
     "next": "12.0.7",
+    "next-transpile-modules": "^9.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "timsort": "^0.3.0",
+    "uuid": "^8.3.0",
+    "vis-data": "^7.0.0",
+    "vis-network": "^8.0.1",
+    "vis-util": "^4.3.4"
   },
   "devDependencies": {
     "@types/node": "16.11.11",
